Fixes Z-index on header text
Fixes Z index on header text and removes palette img on ipads since
they were overlapping.

--- a/assets/styles/media-queries.scss
+++ b/assets/styles/media-queries.scss
@@ -27,3 +27,11 @@
     opacity: 0;
   }
 }
+
+@media only screen
+and (min-device-width : 768px)
+and (max-device-width : 1024px)  {
+  .palette {
+    opacity: 0;
+  }
+}
