--- a/assets/styles/storefront.scss
+++ b/assets/styles/storefront.scss
@@ -88,7 +88,7 @@ header h1 {
   opacity: 0.9;
   padding: 1rem;
   position: relative;
-  z-index: 1;
+  z-index: 15;
 }
 
 h1 {
@@ -115,6 +115,7 @@ input {
 .paintbrush,
 .palette {
   position: absolute;
+  z-index: 5;
 }
 
 .paintbrush {
@@ -229,9 +230,10 @@ ul.dropdown-menu {
 }
 
 .text-display {
+  position: relative;
   font-size: 1.5rem;
   color: #4c443a;
-  z-index: 20;
+  z-index: 40;
 }
 
 .cartHas-display,
